# carve

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  competition.yaml  docker-compose.yaml  shell.nix
.github/: copilot-instructions.md
.github/workflows/: carve-ansible-publish.yml  carve-api-publish.yml  carve-publish.yml
canary/: Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md
canary/src/: check.rs  config.rs  main.rs  redis_manager.rs  scheduler.rs
carve/: Cargo.toml  Dockerfile
carve-ansible/: Dockerfile  ansible.cfg  carve_inventory.yaml  flag.yaml  galaxy.yml  inventory-example.yaml  main.py  playbook.yaml  pyproject.toml
carve-ansible/inventory_plugin/: carve_inventory_plugin.py
carve-ansible/meta/: runtime.yml
carve-ansible/playbooks/: flag.yaml  install-mysql.yaml  install-utilities.yaml  netcat-bindshell.yaml  php_ping.yaml  sudo-find-misconfig.yaml  wacky-users.yaml
carve-ansible/playbooks/templates/: app.php
carve-ansible/playbooks/vars/: main.yaml
carve-ansible/plugins/inventory/: carve_inventory_plugin.py
carve-ansible/tasks/: flag.yaml
carve-ansible/templates/: default-site.conf.j2  nginx.conf.j2
carve-api/: Cargo.toml  Dockerfile  README.md
carve-api/src/: admin.rs  auth.rs  boxes.rs  flag.rs  main.rs  teams.rs  types.rs  users.rs
carve-dnsmasq/: Dockerfile  README.md  entry.sh
carve-novnc-nginx/: Cargo.toml  Dockerfile
carve-novnc-nginx/src/: main.rs
carve-web/: .env  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
carve-web/src/: App.css  App.jsx  App.vue  VueMount.jsx  VueWidget.vue  index.css
carve-web/src/components/: CompetitionStatus.vue  Dialog.vue  Fire.vue  Navigation.vue  Toast.vue
carve-web/src/composables/: useDarkMode.ts
carve-web/src/router/: index.ts
carve-web/src/services/: api.ts
carve/src/: config.rs  lib.rs  redis_manager.rs  util.rs
carve/src/redis_manager/: redis_admin.rs  redis_auth.rs  redis_boxes.rs  redis_competition.rs  redis_flag.rs  redis_support.rs  redis_teams.rs  redis_users.rs
charts/carve/: Chart.yaml  kind.yaml  values.yaml
qemu-box/: Cargo.toml  Dockerfile  README.md  entry.sh
qemu-box/src/: cloud_init.rs  main.rs
qemu-nbd/: Dockerfile  entry.sh
vtep/: Cargo.toml  Dockerfile  README.md  competition.yaml  docker-compose.yaml
vtep/src/: main.rs
vxlan-sidecar/: Cargo.toml  Dockerfile  README.md
vxlan-sidecar/src/: main.rs
(+38 files in other folders)
