[package]
name = "carve-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carve = { path = "../carve" }
actix-web = { version = "4.11.0", features = ["macros"] }
redis = "0.31.0"
tokio = { version = "1", features = ["full"] }
oauth2 = { version = "5.0.0", features = ["native-tls"] }
anyhow = "1.0"
env_logger = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
reqwest = { version = "0.12.20", features = ["native-tls", "json"] }
actix-cors = "0.7.1"
log = "0.4.27"
rand = "0.9.1"

[[bin]]
name = "carve-api"
path = "src/main.rs"
