[package]
name = "qemu-box"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
actix-web = "4.0"
actix-files = "0.6"
rand = "0.9.1"
carve = { path = "../carve" }
ssh-key = { version = "0.6.7", features = ["ed25519", "getrandom"] }
dns-lookup = "2.0.4"
tokio = { version = "1.46.1", features = ["full"] }

[[bin]]
name = "qemu-box"   
path = "src/main.rs"
